####################
Bazaar Release Notes
####################

.. contents:: List of Releases
   :depth: 1

bzr 2.0.5
#########

:Codename:
:2.0.5: NOT RELEASED YET

Bug Fixes
*********

* Avoid ``malloc(0)`` in ``patiencediff``, which is non-portable.
  (Martin Pool, #331095)

* Handle renames correctly when there are files or directories that 
  differ only in case.  (Chris Jones, Martin Pool, #368931)

* Fixed CHM generation by moving the NEWS section template into
  a separate file. (Ian Clatworthy, #524184)

* If ``bzr push --create-prefix`` triggers an unexpected ``NoSuchFile``
  error, report that error rather than failing with an unhelpful
  ``UnboundLocalError``.
  (Andrew Bennetts, #423563)

Documentation
*************

* Added ``location-alias`` help topic.
  (Andrew Bennetts, #337834)

bzr 2.0.4
#########

:Codename: smooth sailing
:2.0.4: 2010-01-21

The fourth bugfix-only release in the 2.0 series contains more than a
dozen bugfixes relative to 2.0.3. The primary focus is on handling
interruptions and concurrent operations more cleanly, there is also a fair
improvement to ``bzr export`` when exporting a remote branch.


Bug Fixes
*********

* ``bzr annotate`` on another branch with ``-r branch:...`` no longer
  fails with an ``ObjectNotLocked`` error.  (Andrew Bennetts, #496590)

* ``bzr export dir`` now requests all file content as a record stream,
  rather than requsting the file content one file-at-a-time. This can make
  exporting over the network significantly faster (54min => 9min in one
  case). (John Arbash Meinel, #343218)

* ``bzr serve`` no longer slowly leaks memory. The compiled
  ``bzrlib.bencode.Encoder()`` class was using ``__del__`` to cleanup and
  free resources, and it should have been using ``__dealloc__``.
  This will likely have an impact on any other process that is serving for
  an extended period of time.  (John Arbash Meinel, #494406)

* Check for SIGINT (Ctrl-C) and other signals immediately if ``readdir``